all_check.txt
    Checking daemon v0.1.0 (C:\Users\hayate\projects\phybkc\crates\daemon)
    Checking gui v0.1.0 (C:\Users\hayate\projects\phybkc\crates\gui)
warning: variable does not need to be mutable
  --> crates\daemon\src\main.rs:40:9
   |
40 |     let mut tray_icon = tray::init_tray(&config)?;
   |         ----^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0500]: closure requires unique access to `*editing_script` but it is already borrowed
  --> crates\gui\src\views\scripts.rs:13:23
   |
12 |     if let Some(script_data) = editing_script {
   |                 ----------- borrow occurs here
13 |         ui.horizontal(|ui| {
   |                       ^^^^ closure construction occurs here
14 |             if ui.button("⬅ Back").clicked() {
15 |                 *editing_script = None;
   |                 --------------- second borrow occurs due to use of `*editing_script` in closure
16 |             }
17 |             ui.label(format!("Editing: {}", script_data.0));
   |                                             ------------- first borrow later captured here by closure

For more information about this error, try `rustc --explain E0500`.
warning: `daemon` (bin "daemon") generated 1 warning (run `cargo fix --bin "daemon" -p daemon` to apply 1 suggestion)
error: could not compile `gui` (bin "gui") due to 1 previous error
